welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:4: error: ';' expected but 'if' found.
	} if (( a+b == 10 + b +c) || ( a+b == 10 + a +c ) ) {
          ^